# FaultFlipper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pixi.toml  pyproject.toml  run_docker.sh
classifier_profiles/: digits_mlp_arm32.toml  face_mlp_arm32.toml
profiles/: arm32_bit_password_check.toml  arm32_fib_only.toml  arm32_nop_password_check.toml  arm32_x_bit_fib.toml  arm32_x_bit_pass.toml  arm32_x_nop_fib.toml  arm32_x_nop_fib_upset_on_match_compiled.toml  arm32_x_nop_fib_upset_on_match_source.toml  arm32_x_nop_pass.toml  arm64_nop_password_check.toml  avr_nop_password_check.toml  digit0002_lbl_2.toml  digit_lbl_2.toml  digit_mlp.toml  every_arm32_fib_pass.toml  every_arm64_fib_pass.toml  every_riscv64_fib_pass.toml  every_x86_64_fib_pass.toml  face.toml  face_6.toml  face_lbl_11.toml  face_lbl_7.toml  face_mlp.toml  large_experiment.toml  multi_arch_1nop_opt0_password_check.toml  password_check_detect.toml  test_arm32_nop.toml  test_bit.toml  x86_64_nop_password_check.toml
scripts/: build_riscv32_toolchain.sh  compare_upset_results.py  data_analysis.py  instruction_visualizer.py  probability_model.py
src/: adv_trace_insn.c  back_offste_trace_insn.c  back_trace_insn.c  binary_tools.py  cli.py  cli_utils.py  dump.gdb  logger_utils.py  new_trace_bak.c  source_to_asm_map.py  tracer.py
test_files/: avr_password.c  fib.c  fib.toml  fib_LOOPCHECK.toml  fib_adj.c  fib_loop_check.c  password_check.c  password_check.toml  password_check_BRANCH.c  password_check_BRANCH.toml  password_check_DETECT.c  password_check_DETECT.toml  password_check_DOUBLE_CHECK.c  (+2 more)
(+3199 files in other folders)
