[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faultflipper"
version = "0.1.0"
description = "FaultFlipper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


# ALL ruff stuff .....
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "scripts/**/*.py" ]

[tool.ruff.lint]
# Defaults: E/F (pycodestyle/pyflakes), I (isort), UP (pyupgrade),
# B (bugbear), SIM (simplify), C4 (comprehensions), Q (quotes), PL (pylint-lite), RUF (extra rules), D (docstrings)
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "Q", "PL", "RUF", "D"]
ignore = ["E501", "C901", "PLR0915", "PLR0912", "PLR0913", "PLR0917"]  # let the formatter manage line length
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "D"]  # magic numbers in tests are fine

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
